Source/WebCore/accessibility/AccessibilityRenderObject.cpp
@@ -84,6 +84,7 @@
 #include "RenderListMarker.h"
 #include "RenderMathMLBlock.h"
 #include "RenderMathMLFraction.h"
+#include "RenderMathMLMath.h"
 #include "RenderMathMLOperator.h"
 #include "RenderMathMLRoot.h"
 #include "RenderMenuList.h"
@@ -635,6 +636,10 @@ String AccessibilityRenderObject::textUnderElement(AccessibilityTextUnderElement
     // so rangeOfContents does not work for them (nor does regular text selection).
     if (isRenderText && m_renderer->isAnonymous() && ancestorsOfType<RenderMathMLOperator>(*m_renderer).first())
         return downcast<RenderText>(*m_renderer).text();
+    if (isAnonymousMathOperator()) {
+        UChar operatorChar = downcast<RenderMathMLOperator>(*m_renderer).textContent();
+        return operatorChar ? String(&operatorChar, 1) : String();
+    }
     if (is<RenderMathMLOperator>(*m_renderer) && !m_renderer->isAnonymous())
         return downcast<RenderMathMLOperator>(*m_renderer).element().textContent();
 #endif
@@ -760,6 +765,9 @@ String AccessibilityRenderObject::stringValue() const
     }
         
     if (is<RenderText>(*m_renderer))
+        return textUnderElement();
+
+    if (isAnonymousMathOperator())
         return textUnderElement();
     
     if (is<RenderMenuList>(cssBox)) {
@@ -3609,6 +3617,12 @@ bool AccessibilityRenderObject::isMathElement() const
     if (!m_renderer)
         return false;
     
+    // The mfenced element creates anonymous RenderMathMLOperators which should be treated
+    // as MathML elements and assigned the MathElementRole so that platform logic regarding
+    // inclusion and role mapping is not bypassed.
+    if (isAnonymousMathOperator())
+        return true;
+
     return is<MathMLElement>(node());
 }
 
@@ -3658,6 +3672,11 @@ bool AccessibilityRenderObject::isMathOperator() const
         return false;
 
     return true;
+}
+
+bool AccessibilityRenderObject::isAnonymousMathOperator() const
+{
+    return is<RenderMathMLOperator>(m_renderer) && m_renderer->isAnonymous();
 }
 
 bool AccessibilityRenderObject::isMathFenceOperator() const
@@ -3751,17 +3770,9 @@ bool AccessibilityRenderObject::isIgnoredElementWithinMathTree() const
 {
     if (!m_renderer)
         return true;
-    
-    // We ignore anonymous renderers inside math blocks.
-    // However, we do not exclude anonymous RenderMathMLOperator nodes created by the mfenced element nor RenderText nodes created by math operators so that the text can be exposed by AccessibilityRenderObject::textUnderElement.
-    if (m_renderer->isAnonymous()) {
-        if (m_renderer->isRenderMathMLOperator())
-            return false;
-        for (AccessibilityObject* parent = parentObject(); parent; parent = parent->parentObject()) {
-            if (parent->isMathElement())
-                return !(m_renderer->isText() && ancestorsOfType<RenderMathMLOperator>(*m_renderer).first());
-        }
-    }
+
+    if (is<RenderText>(*m_renderer))
+        return false;
 
     // Only math elements that we explicitly recognize should be included
     // We don't want things like <mstyle> to appear in the tree.
@@ -3774,7 +3785,7 @@ bool AccessibilityRenderObject::isIgnoredElementWithinMathTree() const
         return true;
     }
 
-    return false;
+    return m_renderer->isAnonymous() && m_renderer->parent() && is<RenderMathMLBlock>(m_renderer->parent());
 }
 
 AccessibilityObject* AccessibilityRenderObject::mathRadicandObject()
